<resources>
    <string name="app_name">GUIDesign</string>
    <string name="ue_citizen">UE Citizen</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="name">Name</string>
    <string name="name_title">Name:</string>
    <string name="nationality">Nationality</string>
    <string name="passport">Passport</string>
    <string name="surname">Surname</string>
    <string name="surname_title">Surname:</string>
</resources>
