<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jjtelechea.netmind.com.guidesign.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="end">


        <ImageView
            android:id="@+id/image_view_front"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/frontprofile"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView

            android:id="@+id/image_view_side"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/sideprofile"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passport"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/surname_title"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/surname"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/nationality"
                    android:background="@android:color/white"
                    android:textSize="20sp"/>

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:text="@string/ue_citizen"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/backgroundpic"
        android:layout_marginTop="5dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@android:color/white">

            <Button
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textColor="@android:color/holo_green_light"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_red_light"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle"/>

            <Button
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical|end"
            android:background="@android:color/transparent"
            />
    </FrameLayout>


</LinearLayout>
